[gd_scene load_steps=7 format=2]

[ext_resource path="res://Particle4Kx4K.png" type="Texture" id=1]
[ext_resource path="res://PINGBALL.gd" type="Script" id=2]
[ext_resource path="res://CAFEFONT.tres" type="DynamicFont" id=3]
[ext_resource path="res://Louis George Cafe.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://BITTER2DOBJ.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="BITTER2DOBJ" type="Node2D"]
script = ExtResource( 5 )

[node name="PINGBALL" type="KinematicBody2D" parent="."]
position = Vector2( 980, 540 )
script = ExtResource( 2 )

[node name="SPRITE" type="Sprite" parent="PINGBALL"]
scale = Vector2( 0.01, 0.01 )
texture = ExtResource( 1 )

[node name="RPCTIMER" type="Timer" parent="PINGBALL"]
wait_time = 2.0
one_shot = true

[node name="PROGRAMLABEL" type="Label" parent="."]
process_priority = 1
margin_left = 40.0
margin_right = 1129.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
text = "BITTER 2D OBJECT MULT BENCHMARK"

[node name="TIMERSLEEP5S" type="Timer" parent="."]
process_mode = 0
wait_time = 5.0
one_shot = true

[node name="TIMERTEST60S" type="Timer" parent="."]
process_mode = 0
wait_time = 30.0
one_shot = true

[node name="2DOBJPOINTS" type="Label" parent="."]
process_priority = 1
margin_left = 54.0
margin_top = 71.0
margin_right = 456.0
margin_bottom = 184.0
custom_fonts/font = ExtResource( 3 )
text = "PARTICLE POINTS: 1024
SECONDS LEFT: 10s"

[connection signal="timeout" from="PINGBALL/RPCTIMER" to="PINGBALL" method="_on_RPCTIMER_timeout"]
[connection signal="timeout" from="TIMERSLEEP5S" to="." method="_on_TIMERSLEEP5S_timeout"]
[connection signal="timeout" from="TIMERTEST60S" to="." method="_on_TIMERTEST60S_timeout"]
